[ci skip] move binned_coveraged function in helpers b032e1b0d65c23d48a9496e15ba340893d7b881c

--- a/jupyterlite/files/notebooks/tutorial_helpers.ipynb
+++ b/jupyterlite/files/notebooks/tutorial_helpers.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3b9d90b",
+   "id": "bd2ad495",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,11 +13,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71fb945c",
+   "id": "103f5b58",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import pandas as pd\n",
     "import polars as pl\n",
     "import polars.selectors as cs\n",
     "import altair\n",
@@ -27,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6013688e",
+   "id": "7486a8fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9c3cfa9",
+   "id": "3162615a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3010b37",
+   "id": "cc24368b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71feac4e",
+   "id": "7dc33f3f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,10 +408,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f52dda28",
-   "metadata": {
-    "lines_to_next_cell": 1
-   },
+   "id": "330d6285",
+   "metadata": {},
    "outputs": [],
    "source": [
     "def plot_binned_residuals(cv_predictions, by=\"hour\"):\n",
@@ -542,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5ce8534",
+   "id": "3dc2fe63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,22 +574,22 @@
     "        A chart with the true target and the forecast values for different horizons.\n",
     "    \"\"\"\n",
     "    merged_data = pl.concat(\n",
-    "        [targets.select(pl.col(\"prediction_time\"), pl.col(\"load_mw\")), named_predictions],\n",
+    "        [\n",
+    "            targets.select(pl.col(\"prediction_time\"), pl.col(\"load_mw\")),\n",
+    "            named_predictions,\n",
+    "        ],\n",
     "        how=\"horizontal\",\n",
     "    )\n",
     "    start_time = plot_at_time - historical_timedelta\n",
-    "    end_time = plot_at_time + datetime.timedelta(\n",
-    "        hours=named_predictions.shape[1]\n",
-    "    )\n",
+    "    end_time = plot_at_time + datetime.timedelta(hours=named_predictions.shape[1])\n",
     "    true_values_past = merged_data.filter(\n",
     "        pl.col(\"prediction_time\").is_between(start_time, plot_at_time, closed=\"both\")\n",
     "    ).rename({\"load_mw\": \"Past true load\"})\n",
     "    true_values_future = merged_data.filter(\n",
     "        pl.col(\"prediction_time\").is_between(plot_at_time, end_time, closed=\"right\")\n",
     "    ).rename({\"load_mw\": \"Future true load\"})\n",
-    "    predicted_record = (\n",
-    "        merged_data.select(cs.starts_with(\"predict\"))\n",
-    "        .row(by_predicate=pl.col(\"prediction_time\") == plot_at_time, named=True)\n",
+    "    predicted_record = merged_data.select(cs.starts_with(\"predict\")).row(\n",
+    "        by_predicate=pl.col(\"prediction_time\") == plot_at_time, named=True\n",
     "    )\n",
     "    forecast_values = pl.DataFrame(\n",
     "        {\n",
@@ -623,6 +622,153 @@
     "    return (\n",
     "        true_values_past_chart + true_values_future_chart + forecast_values_chart\n",
     "    ).interactive()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1cac59eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def coverage(y_true, y_quantile_low, y_quantile_high):\n",
+    "    \"\"\"Compute the coverage of the quantile predictions.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    y_true : numpy.ndarray\n",
+    "        True target values.\n",
+    "    y_quantile_low : numpy.ndarray\n",
+    "        Lower quantile predictions.\n",
+    "    y_quantile_high : numpy.ndarray\n",
+    "        Upper quantile predictions.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    float\n",
+    "        The coverage of the quantile predictions.\n",
+    "    \"\"\"\n",
+    "    y_true = np.asarray(y_true)\n",
+    "    y_quantile_low = np.asarray(y_quantile_low)\n",
+    "    y_quantile_high = np.asarray(y_quantile_high)\n",
+    "    return float(\n",
+    "        np.logical_and(y_true >= y_quantile_low, y_true <= y_quantile_high)\n",
+    "        .mean()\n",
+    "        .round(4)\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3fc74b41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mean_width(y_true, y_quantile_low, y_quantile_high):\n",
+    "    \"\"\"Compute the mean width of the quantile predictions.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    y_true : numpy.ndarray\n",
+    "        True target values.\n",
+    "    y_quantile_low : numpy.ndarray\n",
+    "        Lower quantile predictions.\n",
+    "    y_quantile_high : numpy.ndarray\n",
+    "        Upper quantile predictions.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    float\n",
+    "        The mean width of the quantile predictions.\n",
+    "    \"\"\"\n",
+    "    y_true = np.asarray(y_true)\n",
+    "    y_quantile_low = np.asarray(y_quantile_low)\n",
+    "    y_quantile_high = np.asarray(y_quantile_high)\n",
+    "    return float(np.abs(y_quantile_high - y_quantile_low).mean().round(1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97735ed6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def binned_coverage(y_true_folds, y_quantile_low, y_quantile_high, n_bins=10):\n",
+    "    \"\"\"Compute coverage after binning true values using quantile-based binning.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    y_true_folds : list of numpy.ndarray\n",
+    "        List of true target values, one array per CV fold\n",
+    "    y_quantile_low : list of numpy.ndarray\n",
+    "        List of lower quantile predictions, one array per CV fold\n",
+    "    y_quantile_high : list of numpy.ndarray\n",
+    "        List of upper quantile predictions, one array per CV fold\n",
+    "    n_bins : int, default=10\n",
+    "        Number of bins to create\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    pandas.DataFrame\n",
+    "        DataFrame with columns: bin_left, bin_right, bin_center, fold_idx,\n",
+    "        coverage, mean_width, n_samples\n",
+    "    \"\"\"\n",
+    "    all_true_values = np.concatenate(y_true_folds)\n",
+    "    df = pd.DataFrame({\"bin_by\": all_true_values})\n",
+    "    df[\"bin\"] = pd.qcut(df[\"bin_by\"], q=n_bins, labels=False, duplicates=\"drop\")\n",
+    "\n",
+    "    bin_boundaries = []\n",
+    "    for bin_idx in sorted(df[\"bin\"].dropna().unique()):\n",
+    "        bin_mask = df[\"bin\"] == bin_idx\n",
+    "        bin_values = df.loc[bin_mask, \"bin_by\"]\n",
+    "        bin_boundaries.append((bin_values.min(), bin_values.max()))\n",
+    "\n",
+    "    results = []\n",
+    "    n_folds = len(y_quantile_low)\n",
+    "\n",
+    "    for fold_idx in range(n_folds):\n",
+    "        fold_true = y_true_folds[fold_idx]\n",
+    "        fold_low = y_quantile_low[fold_idx]\n",
+    "        fold_high = y_quantile_high[fold_idx]\n",
+    "\n",
+    "        # Assign each sample in this fold to a bin\n",
+    "        fold_bins = (\n",
+    "            np.digitize(fold_true, bins=[b[0] for b in bin_boundaries] + [np.inf]) - 1\n",
+    "        )\n",
+    "\n",
+    "        for bin_idx, (bin_left, bin_right) in enumerate(bin_boundaries):\n",
+    "            # Get samples from this fold that fall into this bin\n",
+    "            bin_mask = fold_bins == bin_idx\n",
+    "\n",
+    "            if np.sum(bin_mask) == 0:\n",
+    "                # No samples in this bin for this fold\n",
+    "                continue\n",
+    "\n",
+    "            fold_bin_true = fold_true[bin_mask]\n",
+    "            fold_bin_low = fold_low[bin_mask]\n",
+    "            fold_bin_high = fold_high[bin_mask]\n",
+    "\n",
+    "            bin_center = (bin_left + bin_right) / 2\n",
+    "            n_samples_in_bin = len(fold_bin_true)\n",
+    "\n",
+    "            coverage_score = coverage(fold_bin_true, fold_bin_low, fold_bin_high)\n",
+    "            width = mean_width(fold_bin_true, fold_bin_low, fold_bin_high)\n",
+    "\n",
+    "            results.append(\n",
+    "                {\n",
+    "                    \"bin_left\": bin_left,\n",
+    "                    \"bin_right\": bin_right,\n",
+    "                    \"bin_center\": bin_center,\n",
+    "                    \"fold_idx\": fold_idx,\n",
+    "                    \"coverage\": coverage_score,\n",
+    "                    \"mean_width\": width,\n",
+    "                    \"n_samples\": n_samples_in_bin,\n",
+    "                }\n",
+    "            )\n",
+    "\n",
+    "    return pd.DataFrame(results)"
    ]
   }
  ],
