[ci skip] Hide the code of the collect_cv_predictions hack in the helpers d7f0e7cd533d92dd75c5c979a89e92ef50126560

--- a/_sources/content/notebooks/tutorial_helpers.ipynb
+++ b/_sources/content/notebooks/tutorial_helpers.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fdbbea95",
+   "id": "bce36b99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a926841",
+   "id": "bb8e4f2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2a851dd",
+   "id": "5acfa2b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a6fb3e5",
+   "id": "1a81868e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91928b46",
+   "id": "ccd2482b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d22d7e9",
+   "id": "d1ee5da8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67ed1648",
+   "id": "a886e534",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e7d9d9c",
+   "id": "e9e9a003",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29f0c6d3",
+   "id": "f15ae3e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54872ddd",
+   "id": "b19b28fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32eec6f6",
+   "id": "b1ba3d9a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -769,6 +769,49 @@
     "            )\n",
     "\n",
     "    return pd.DataFrame(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58c52240",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def collect_cv_predictions(\n",
+    "    pipelines,\n",
+    "    cv_splitter,\n",
+    "    predictions,\n",
+    "    prediction_time,\n",
+    "):\n",
+    "    index_generator = cv_splitter.split(prediction_time.skb.eval())\n",
+    "\n",
+    "    def splitter(X, y, index_generator):\n",
+    "        \"\"\"Workaround to transform a scikit-learn splitter into a function understood\n",
+    "        by `skrub.train_test_split`.\"\"\"\n",
+    "        train_idx, test_idx = next(index_generator)\n",
+    "        return X[train_idx], X[test_idx], y[train_idx], y[test_idx]\n",
+    "\n",
+    "    results = []\n",
+    "\n",
+    "    for (_, test_idx), pipeline in zip(\n",
+    "        cv_splitter.split(prediction_time.skb.eval()), pipelines\n",
+    "    ):\n",
+    "        split = predictions.skb.train_test_split(\n",
+    "            predictions.skb.get_data(),\n",
+    "            splitter=splitter,\n",
+    "            index_generator=index_generator,\n",
+    "        )\n",
+    "        results.append(\n",
+    "            pl.DataFrame(\n",
+    "                {\n",
+    "                    \"prediction_time\": prediction_time.skb.eval()[test_idx],\n",
+    "                    \"load_mw\": split[\"y_test\"],\n",
+    "                    \"predicted_load_mw\": pipeline.predict(split[\"test\"]),\n",
+    "                }\n",
+    "            )\n",
+    "        )\n",
+    "    return results"
    ]
   }
  ],
