--- a/jupyterlite/files/notebooks/tutorial_helpers.ipynb
+++ b/jupyterlite/files/notebooks/tutorial_helpers.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb0836dd",
+   "id": "eac5ab1a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01f019b5",
+   "id": "508eca46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8a49117",
+   "id": "590a5b96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a093f28",
+   "id": "0a33cbc6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a36e9737",
+   "id": "5be37ccb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93c57d71",
+   "id": "0896d0e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6901217",
+   "id": "67698b7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc44ba51",
+   "id": "20639402",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a887495",
+   "id": "785f924f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38fa716d",
+   "id": "4c82364c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83b3312d",
+   "id": "2f5ea38c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -769,6 +769,49 @@
     "            )\n",
     "\n",
     "    return pd.DataFrame(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ffe3bdbc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def collect_cv_predictions(\n",
+    "    pipelines,\n",
+    "    cv_splitter,\n",
+    "    predictions,\n",
+    "    prediction_time,\n",
+    "):\n",
+    "    index_generator = cv_splitter.split(prediction_time.skb.eval())\n",
+    "\n",
+    "    def splitter(X, y, index_generator):\n",
+    "        \"\"\"Workaround to transform a scikit-learn splitter into a function understood\n",
+    "        by `skrub.train_test_split`.\"\"\"\n",
+    "        train_idx, test_idx = next(index_generator)\n",
+    "        return X[train_idx], X[test_idx], y[train_idx], y[test_idx]\n",
+    "\n",
+    "    results = []\n",
+    "\n",
+    "    for (_, test_idx), pipeline in zip(\n",
+    "        cv_splitter.split(prediction_time.skb.eval()), pipelines\n",
+    "    ):\n",
+    "        split = predictions.skb.train_test_split(\n",
+    "            predictions.skb.get_data(),\n",
+    "            splitter=splitter,\n",
+    "            index_generator=index_generator,\n",
+    "        )\n",
+    "        results.append(\n",
+    "            pl.DataFrame(\n",
+    "                {\n",
+    "                    \"prediction_time\": prediction_time.skb.eval()[test_idx],\n",
+    "                    \"load_mw\": split[\"y_test\"],\n",
+    "                    \"predicted_load_mw\": pipeline.predict(split[\"test\"]),\n",
+    "                }\n",
+    "            )\n",
+    "        )\n",
+    "    return results"
    ]
   }
  ],
