[ci skip] Small improvements in horizon plots a48d4d098a5a2beedc766633c5e6bb1a5de12cc4

--- a/jupyterlite/files/notebooks/tutorial_helpers.ipynb
+++ b/jupyterlite/files/notebooks/tutorial_helpers.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e837c010",
+   "id": "979098b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d55d97c",
+   "id": "24aae467",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a690fd4c",
+   "id": "43e77eae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "752508a1",
+   "id": "b6e58b98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b287eff6",
+   "id": "e3e718fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14dae05e",
+   "id": "8ffe6a94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d3a04e6",
+   "id": "49c2ac0a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60b7f614",
+   "id": "850ad6ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,8 +550,8 @@
     "    targets,\n",
     "    named_predictions,\n",
     "    plot_at_time,\n",
-    "    historical_timedelta,\n",
     "    target_column_name_pattern,\n",
+    "    past_hours=7 * 24,\n",
     "):\n",
     "    \"\"\"Plot the true target and the forecast values for different horizons.\n",
     "\n",
@@ -563,10 +563,10 @@
     "        A DataFrame containing the predicted values.\n",
     "    plot_at_time : datetime.datetime\n",
     "        The time at which to plot the forecast.\n",
-    "    historical_timedelta : datetime.timedelta\n",
-    "        The historical timedelta to use for the plot.\n",
     "    target_column_name_pattern : str\n",
     "        The pattern to use for the target column names.\n",
+    "    past_hours : int, default=7 * 24\n",
+    "        The number of past hours to include in the plot.\n",
     "\n",
     "    Returns\n",
     "    -------\n",
@@ -580,7 +580,7 @@
     "        ],\n",
     "        how=\"horizontal\",\n",
     "    )\n",
-    "    start_time = plot_at_time - historical_timedelta\n",
+    "    start_time = plot_at_time - datetime.timedelta(hours=past_hours)\n",
     "    end_time = plot_at_time + datetime.timedelta(hours=named_predictions.shape[1])\n",
     "    true_values_past = merged_data.filter(\n",
     "        pl.col(\"prediction_time\").is_between(start_time, plot_at_time, closed=\"both\")\n",
@@ -627,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8d060ff",
+   "id": "16249e99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9bed1c4",
+   "id": "fc3e1219",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04595db0",
+   "id": "88e89958",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,7 +774,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed6ccd0e",
+   "id": "a439b057",
    "metadata": {},
    "outputs": [],
    "source": [
