--- a/_sources/content/notebooks/tutorial_helpers.ipynb
+++ b/_sources/content/notebooks/tutorial_helpers.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7afcc845",
+   "id": "a937afab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de0f5da3",
+   "id": "5177cc6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02f4f705",
+   "id": "d11a67ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5cc0751",
+   "id": "3daf9ee0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d6aaa17",
+   "id": "f7dcd7b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb609d16",
+   "id": "cc61842a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ff42c41",
+   "id": "f2792d7c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80dc9f72",
+   "id": "33513d92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,8 +550,8 @@
     "    targets,\n",
     "    named_predictions,\n",
     "    plot_at_time,\n",
-    "    historical_timedelta,\n",
     "    target_column_name_pattern,\n",
+    "    past_hours=7 * 24,\n",
     "):\n",
     "    \"\"\"Plot the true target and the forecast values for different horizons.\n",
     "\n",
@@ -563,10 +563,10 @@
     "        A DataFrame containing the predicted values.\n",
     "    plot_at_time : datetime.datetime\n",
     "        The time at which to plot the forecast.\n",
-    "    historical_timedelta : datetime.timedelta\n",
-    "        The historical timedelta to use for the plot.\n",
     "    target_column_name_pattern : str\n",
     "        The pattern to use for the target column names.\n",
+    "    past_hours : int, default=7 * 24\n",
+    "        The number of past hours to include in the plot.\n",
     "\n",
     "    Returns\n",
     "    -------\n",
@@ -580,7 +580,7 @@
     "        ],\n",
     "        how=\"horizontal\",\n",
     "    )\n",
-    "    start_time = plot_at_time - historical_timedelta\n",
+    "    start_time = plot_at_time - datetime.timedelta(hours=past_hours)\n",
     "    end_time = plot_at_time + datetime.timedelta(hours=named_predictions.shape[1])\n",
     "    true_values_past = merged_data.filter(\n",
     "        pl.col(\"prediction_time\").is_between(start_time, plot_at_time, closed=\"both\")\n",
@@ -627,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e457c96",
+   "id": "a80fc219",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8feaad75",
+   "id": "0613c8ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ead8d55d",
+   "id": "2bc41fa6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,7 +774,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff44c1ee",
+   "id": "c2eb7c9b",
    "metadata": {},
    "outputs": [],
    "source": [
