--- a/_sources/content/notebooks/tutorial_helpers.ipynb
+++ b/_sources/content/notebooks/tutorial_helpers.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "121b149c",
+   "id": "a89e1068",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "caf4d996",
+   "id": "ef876b6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da444bd6",
+   "id": "653323c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d509c3b",
+   "id": "3ff283ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3284b53",
+   "id": "56cca111",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,13 +244,21 @@
     "    all_loads = pl.concat(all_loads[\"load_mw\", \"predicted_load_mw\"])\n",
     "    min_load, max_load = all_loads.min(), all_loads.max()\n",
     "    scale = altair.Scale(domain=[min_load, max_load])\n",
+    "    if kind == \"mean\":\n",
+    "        y_name = \"mean_load_mw\"\n",
+    "        agg_expr = pl.col(\"load_mw\").mean()\n",
+    "    elif kind == \"quantile\":\n",
+    "        y_name = \"quantile_of_load_mw\"\n",
+    "        agg_expr = pl.col(\"load_mw\").quantile(quantile_level)\n",
+    "    else:\n",
+    "        raise ValueError(f\"Unknown kind: {kind}. Use 'mean' or 'quantile'.\")\n",
     "\n",
     "    chart = (\n",
     "        altair.Chart(\n",
     "            pl.DataFrame(\n",
     "                {\n",
     "                    \"mean_predicted_load_mw\": [min_load, max_load],\n",
-    "                    \"mean_load_mw\": [min_load, max_load],\n",
+    "                    y_name: [min_load, max_load],\n",
     "                    \"label\": [\"Perfect\"] * 2,\n",
     "                }\n",
     "            )\n",
@@ -258,7 +266,7 @@
     "        .mark_line(tooltip=True, opacity=0.8, strokeDash=[5, 5])\n",
     "        .encode(\n",
     "            x=altair.X(\"mean_predicted_load_mw:Q\", scale=scale),\n",
-    "            y=altair.Y(\"mean_load_mw:Q\", scale=scale),\n",
+    "            y=altair.Y(f\"{y_name}:Q\", scale=scale),\n",
     "            color=altair.Color(\n",
     "                \"label:N\",\n",
     "                scale=altair.Scale(range=[\"black\"]),\n",
@@ -271,15 +279,6 @@
     "        min_date = cv_predictions_i[\"prediction_time\"].min().strftime(\"%Y-%m-%d\")\n",
     "        max_date = cv_predictions_i[\"prediction_time\"].max().strftime(\"%Y-%m-%d\")\n",
     "        fold_label = f\"#{fold_idx} - {min_date} to {max_date}\"\n",
-    "\n",
-    "        if kind == \"mean\":\n",
-    "            y_name = \"mean_load_mw\"\n",
-    "            agg_expr = pl.col(\"load_mw\").mean()\n",
-    "        elif kind == \"quantile\":\n",
-    "            y_name = \"quantile_of_load_mw\"\n",
-    "            agg_expr = pl.col(\"load_mw\").quantile(quantile_level)\n",
-    "        else:\n",
-    "            raise ValueError(f\"Unknown kind: {kind}. Use 'mean' or 'quantile'.\")\n",
     "\n",
     "        mean_per_bins = (\n",
     "            cv_predictions_i.group_by(\n",
@@ -314,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd0e6906",
+   "id": "7a477634",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2057095",
+   "id": "a1bfc4bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd0bdbc1",
+   "id": "e610e80e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,7 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "160d23b0",
+   "id": "457b3d78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad2f6526",
+   "id": "12848f6e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d64921c8",
+   "id": "6f269fac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,7 +773,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed31e6d3",
+   "id": "d19c597e",
    "metadata": {},
    "outputs": [],
    "source": [
