manual update jupyterlite

--- a/jupyterlite/files/notebooks/tutorial_helpers.ipynb
+++ b/jupyterlite/files/notebooks/tutorial_helpers.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a42901de",
+   "id": "8ecfee32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac5b9cdd",
+   "id": "e7631126",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df5f09bb",
+   "id": "d48e5b2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f51d26eb",
+   "id": "b0904b88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca9829d9",
+   "id": "5e24cfed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,13 +244,21 @@
     "    all_loads = pl.concat(all_loads[\"load_mw\", \"predicted_load_mw\"])\n",
     "    min_load, max_load = all_loads.min(), all_loads.max()\n",
     "    scale = altair.Scale(domain=[min_load, max_load])\n",
+    "    if kind == \"mean\":\n",
+    "        y_name = \"mean_load_mw\"\n",
+    "        agg_expr = pl.col(\"load_mw\").mean()\n",
+    "    elif kind == \"quantile\":\n",
+    "        y_name = \"quantile_of_load_mw\"\n",
+    "        agg_expr = pl.col(\"load_mw\").quantile(quantile_level)\n",
+    "    else:\n",
+    "        raise ValueError(f\"Unknown kind: {kind}. Use 'mean' or 'quantile'.\")\n",
     "\n",
     "    chart = (\n",
     "        altair.Chart(\n",
     "            pl.DataFrame(\n",
     "                {\n",
     "                    \"mean_predicted_load_mw\": [min_load, max_load],\n",
-    "                    \"mean_load_mw\": [min_load, max_load],\n",
+    "                    y_name: [min_load, max_load],\n",
     "                    \"label\": [\"Perfect\"] * 2,\n",
     "                }\n",
     "            )\n",
@@ -258,7 +266,7 @@
     "        .mark_line(tooltip=True, opacity=0.8, strokeDash=[5, 5])\n",
     "        .encode(\n",
     "            x=altair.X(\"mean_predicted_load_mw:Q\", scale=scale),\n",
-    "            y=altair.Y(\"mean_load_mw:Q\", scale=scale),\n",
+    "            y=altair.Y(f\"{y_name}:Q\", scale=scale),\n",
     "            color=altair.Color(\n",
     "                \"label:N\",\n",
     "                scale=altair.Scale(range=[\"black\"]),\n",
@@ -271,15 +279,6 @@
     "        min_date = cv_predictions_i[\"prediction_time\"].min().strftime(\"%Y-%m-%d\")\n",
     "        max_date = cv_predictions_i[\"prediction_time\"].max().strftime(\"%Y-%m-%d\")\n",
     "        fold_label = f\"#{fold_idx} - {min_date} to {max_date}\"\n",
-    "\n",
-    "        if kind == \"mean\":\n",
-    "            y_name = \"mean_load_mw\"\n",
-    "            agg_expr = pl.col(\"load_mw\").mean()\n",
-    "        elif kind == \"quantile\":\n",
-    "            y_name = \"quantile_of_load_mw\"\n",
-    "            agg_expr = pl.col(\"load_mw\").quantile(quantile_level)\n",
-    "        else:\n",
-    "            raise ValueError(f\"Unknown kind: {kind}. Use 'mean' or 'quantile'.\")\n",
     "\n",
     "        mean_per_bins = (\n",
     "            cv_predictions_i.group_by(\n",
@@ -314,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce3a78e6",
+   "id": "497d8d2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60fed607",
+   "id": "4913da3b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a44a35d",
+   "id": "b089758a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,7 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6f175fb",
+   "id": "8f487fb2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1b53bc8",
+   "id": "de006ff2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71d17ed0",
+   "id": "762ba638",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,7 +773,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9031746d",
+   "id": "00a7f50a",
    "metadata": {},
    "outputs": [],
    "source": [
